--- a/faculty_dashboard.html
+++ b/faculty_dashboard.html
@@ -298,6 +298,7 @@ body{
 <div class="right-sidebar">
 
     <div class="category">
+        <h4>Filter By Target</h4>
         <button onclick="filterTarget('All Students')">All Students</button>
         <button onclick="filterTarget('1st Year')">First Year</button>
         <button onclick="filterTarget('2nd Year')">Second Year</button>
@@ -306,6 +307,7 @@ body{
     </div>
 
     <div class="special-category">
+        <h4>Special Notices</h4>
         <button onclick="showUrgentNotices()">🚨 Urgent Notices</button>
         <button onclick="showImportantNotices()">⭐ Important Notices</button>
         <button onclick="showExpiredNotices()">⏰ Expired Notices</button>
